Changelog
=========

0.5 (unreleased)
----------------

0.4 (2010-10-05)
----------------

- Allow adding text as well as links. 
  http://plone.org/products/doormat/issues/6
  [renskers]

- Re-added skins folders, as these will be generated by AGX. 
  (Make them not empty.)
  http://plone.org/products/doormat/issues/4
  [khink]

- Add class on 'doormat-container' div for number of columns. 
  Add CSS so columns are equal width.
  [khink]

0.3 (2010-07-19)
----------------

- Remove empty skins/ folders doormat_styles/ and doormat_templates/ (fixes
  http://plone.org/products/doormat/issues/4: Skin dirs missing from egg)

- Added viewlet doormat.footer.bare to display the doormat without the div.row
  and div.cell wrapping.

0.2 (2010-06-11)
----------------

- Add viewlet to browser layer (fixes
  http://plone.org/products/doormat/issues/3: Uninstall cleanly)

0.1.1 (2010-06-09)
------------------

- added locales/NOTEMPTY.txt to ensure locales/ is added to egg. This fixes #1
  (http://plone.org/products/doormat/issues/1)
- updated doc

0.1 (2010-06-08)
----------------

Initial release
