@@ -8,7 +8,7 @@
     id="Doormat-Update-RoleMappings" 
     handler="Products.Doormat.setuphandlers.updateRoleMappings"
     title="Update Workflow role mappings for Doormat"
-    version="2010-10-04T15:34:25.938342">
+    version="2010-10-13T16:45:26.262633">
    <dependency step="Doormat-QI-dependencies"/>
    updates the workflow role mappings for Doormat
  </import-step>
@@ -17,7 +17,7 @@
     id="Doormat-postInstall" 
     handler="Products.Doormat.setuphandlers.postInstall"
     title="manual coded post-install for Doormat"
-    version="2010-10-04T15:34:25.938342">
+    version="2010-10-13T16:45:26.262633">
    <dependency step="Doormat-QI-dependencies"/>
    manual coded post-install for Doormat
  </import-step>
