@@ -11,7 +11,7 @@
  <property name="product">Doormat</property>
  <property name="factory">addDoormatSection</property>
  <property name="immediate_view">folder_listing</property>
- <property name="global_allow">True</property>
+ <property name="global_allow">False</property>
  <property name="filter_content_types">True</property>
  <property name="allowed_content_types">
    <element value="Link"/>
