@@ -1,0 +1,12 @@
+For developers
+==============
+
+This product's content types were created with ArchGenXML. The model is in the
+the UML directory. There's a makefile for generating: cd to Products/Doormat
+and run::
+    
+    make -C ../../uml/
+
+Please keep the UML model up-to-date so AGX code generation keeps working,
+unless you have good reason to do so, and please do not use older versions of AGX
+than the version it was last generated with.
